--- a/assets/index.css
+++ b/assets/index.css
@@ -4,10 +4,38 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
     .card {
-        color: white;
+        display: flex;
+        
     }
+        .statsContainer {
+            color: white;
+            width: 450px;
+        }
+        .imageContainer {
+            position: relative;
+            width: 450px;
+            height: auto;
+            overflow: hidden;
+        }
+            .colorOverlay {
+                background-color: hsl(277, 67%, 54%);   
+                opacity: 0.6;
+                position: absolute;
+                width: 100%;
+                height: 100%;  
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+            }
+            .imageContainer img {
+                width: 100%;
+                height: 100%;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+            }
+
 
 footer {
     margin-top: 50px;
