--- a/assets/index.css
+++ b/assets/index.css
@@ -10,30 +10,92 @@ body {
         display: flex;
         
     }
-        .statsContainer {
+        .cardInfoContainer {
             color: white;
-            width: 450px;
+            width: 550px;
+            background-color: hsl(244, 38%, 16%);
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
         }
+            .textContainer {
+                margin-top: 70px;
+                margin-left: 70px;
+            }
+                h1 {
+                    font-family: 'Inter', sans-serif;
+                    /* font-family: 'Lexend Deca', sans-serif; */
+                    font-size: 36.5px;
+                    color: hsl(0, 0%, 100%);
+                    width: 450px;
+                    margin-bottom: 25px;
+                }
+                    span {
+                        font-family: 'Inter', sans-serif;
+                        color: hsl(277, 64%, 61%);
+                    }
+                .description {
+                    font-family: 'Inter', sans-serif;
+                    /* font-family: 'Lexend Deca', sans-serif; */
+                    font-weight: 400;
+                    font-size: 15px;
+                    color: hsla(0, 0%, 100%, 0.75);
+                    line-height: 25px;
+                    width: 390px;
+                    margin-bottom: 0px;
+                }
+            .statsContainer {
+                display: flex;
+                gap: 60px;
+                margin-top: 90px;
+                /* margin-bottom: 30px; */
+                margin-left: 70px;
+            }
+                .companies {
+
+                }
+                    .statsNumber {
+                        font-family: 'Inter', sans-serif;
+                        font-size: 20px;
+                        font-weight: 700;
+                        color: hsl(0, 0%, 100%);
+                        text-transform: uppercase;
+
+                        margin-top: 0px;
+                        margin-bottom: 5px;
+                    }
+                    .statsText {
+                        color: hsla(0, 0%, 100%, 0.6);
+                        font-family: 'Inter', sans-serif;
+                        font-family: 'Lexend Deca', sans-serif;
+                        text-transform: uppercase;
+                        font-size: 12px;
+
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+                    }
+            
         .imageContainer {
             position: relative;
-            width: 450px;
+            width: 550px;
             height: auto;
             overflow: hidden;
         }
             .colorOverlay {
-                background-color: hsl(277, 67%, 54%);   
+                background-color: hsl(277, 87%, 45%);   
                 opacity: 0.6;
                 position: absolute;
                 width: 100%;
                 height: 100%;  
                 border-top-right-radius: 10px;
                 border-bottom-right-radius: 10px;
+                z-index: 3;
             }
             .imageContainer img {
                 width: 100%;
                 height: 100%;
                 border-top-right-radius: 10px;
                 border-bottom-right-radius: 10px;
+                position: relative;
             }
 
 
