--- a/assets/index.css
+++ b/assets/index.css
@@ -1,6 +1,14 @@
 body {
     background-color: hsl(233, 47%, 7%);
-    height: 100vh;
+    /* height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+}
+main {
+    background-color: hsl(233, 47%, 7%);
+    height: 75vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +16,7 @@ body {
 }
     .card {
         display: flex;
-        
+        flex-direction: row;
     }
         .cardInfoContainer {
             color: white;
@@ -101,4 +109,116 @@ body {
 
 footer {
     margin-top: 50px;
+    color: white;
+}
+
+/* Mobile CSS */
+
+@media screen and (max-width: 375px) {
+body {
+    /* align-items: center; */
+    /* display: block; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content:flex-end; */
+    /* align-items: center; */
+    /* width: 100vh; */
+    /* height: 100vh; */
+    padding-top: 40px;
+}
+    main {
+        height: 100%;
+        
+    }
+    .card {
+        /* margin-top: 20px; */
+        flex-direction: column-reverse;   
+        width: 300px;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+        .cardInfoContainer {
+            width: 300px;
+            display: flex;
+            flex-direction: column;   
+            align-items: center;
+            border-top-right-radius: 0px;
+            border-bottom-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            border-top-left-radius: 0px;
+        }
+            .textContainer {
+                margin-top: 10px;
+                margin-left: 0px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+                h1 {
+                    font-size: 26px;
+                    width: 250px;
+                    margin-bottom: 0px;
+                    margin-right: 0px;
+                    text-align: center;
+                    
+                }
+                .description {
+                    font-size: 15px;
+                    line-height: 25px;
+                    width: 270px;
+                    margin-bottom: 25px;
+                    text-align: center;
+                }
+            .statsContainer {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                margin-top:10px;
+                margin-bottom: 30px;
+                margin-left: 0px;
+            }
+                .companies {
+
+                }
+                    .statsNumber {
+                        font-family: 'Inter', sans-serif;
+                        font-size: 20px;
+                        font-weight: 700;
+                        color: hsl(0, 0%, 100%);
+                        text-transform: uppercase;
+
+                        margin-top: 0px;
+                        margin-bottom: 5px;
+                    }
+                    .statsText {
+                        color: hsla(0, 0%, 100%, 0.6);
+                        font-family: 'Inter', sans-serif;
+                        font-family: 'Lexend Deca', sans-serif;
+                        text-transform: uppercase;
+                        font-size: 12px;
+
+                        margin-top: 0px;
+                        margin-bottom: 0px;
+                    }
+        .imageContainer {
+            width: 300px;
+            height: 230px;
+        }
+            .colorOverlay {
+                border-top-right-radius: 10px;
+                border-top-left-radius: 10px;
+                border-bottom-right-radius: 0px;
+                height: 100%;
+            }
+            .imageContainer img {
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 0px;
+                border-top-left-radius: 10px;
+                height: 100%;
+            }
+
+
+    footer {
+        margin-bottom: 40px;
+    }
 }
